# AITrader

./: .dockerignore  .env.example  .gitignore  .monitor_dashboard.pid  .paper_trading.pid  .pre-commit-config.yaml  AGENTS.md  CONFIG-USAGE.md  Dockerfile  Dockerfile.test  Forex-Gold-AI-Trading-Plan-2025  MAIN-IMPLEMENTATION-PLAN.md  README.md  docker-compose.yml  pyproject.toml
.agents/skills_ref/: SKILL (1).md  SKILL (10).md  SKILL (11).md  SKILL (12).md  SKILL (2).md  SKILL (3).md  SKILL (4).md  SKILL (6).md  SKILL (7).md  SKILL.md
.arch/: AGENTS.md  MASTER.md
.arch/DEV2/: CONTRACTS.md  MASTER.md  (+9 more)
DEV_PLAN/: CONTRACTS.md  D02-DATA.md  D03-FUNDAMENTAL.md  D05-DECISION.md  D06-EXECUTION.md  D07-NOTIFIER.md  D08-BACKTEST.md  D09-TRAINER.md  D11-OPS.md  DATA-RETENTION.md  MASTER.md  STATUS_AND_ROADMAP.md
config/: dev copy.yaml  dev.yaml  instruments.yaml  prod.yaml  schema.yaml  staging.yaml
dashboards/: feature_explorer.py  paper_monitor.py
docker/: Dockerfile  README.md  docker-compose.webui.yml  docker-compose.yml  docker_dev_build.sh  docker_dev_dashboards.sh  docker_dev_gpu_check.sh  docker_dev_paper.sh  docker_dev_shell.sh  docker_dev_status.sh  docker_dev_stop.sh  docker_dev_test.sh  docker_dev_train.sh  docker_dev_webui.sh  start_docker.sh  status_docker.sh  stop_docker.sh
docs/: ADR-001-cpcv.md  ADR-002-config.md  CONFIG-MODELS.md  CONFIG-USAGE.md  DOCKER-DEV-GUIDE.md  NEW-MODELS.md  PROJECT-GUIDE-IMPROVEMENTS.md  QUICKSTART-PAPER-TRADING.md  TIMEFRAMES.md  broker-integration-roadmap.md  data-sources.md  data-versioning.md  go-live-checklist.md  runbook-deploy.md  runbook-halt-trading.md  visualization-roadmap.md
frontend/: package-lock.json  package.json  vite.config.ts
k8s/: configmap.yaml  deployment.yaml  secrets.yaml.template
reports/: eurusd_lstm_transformer_report.html
scripts/: backfill_historical.py  compare_models.py  data_refresh.py  download_intraday_data.py  download_sample_data.py  generate_higher_timeframes.py  generate_plots.py  ingest_real_data.py  makedata.sh  paper_soak_status.py  project_overview.py  promote_model.py  repair_data.py  retrain_monthly.py  run_backtest.py  run_paper.py  seed_chart_data.py  setup_finbert.py  start_paper.sh  start_webui.sh  status_paper.sh  stop_paper.sh  stop_webui.sh  test_dukascopy_apis.py  train_all.py  train_intraday.py  train_model.py
src/: __init__.py  config.py
tests/: conftest.py
(+445 files in other folders)
