[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-platform"
version = "0.1.0"
description = "AI-powered algorithmic trading platform for Forex & Gold"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Trading Platform Team" }]
keywords = ["trading", "forex", "gold", "algorithmic", "ml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "numpy<2,>=1.24",
  "pandas-ta>=0.3.14b",
  "hmmlearn>=0.3.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
  "pre-commit>=3.0",
]
ml = [
  "scikit-learn>=1.3",
  "torch>=2.0",
  "statsmodels>=0.14",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "arch>=6.0",
]
backtest = [
  "mlfinlab>=0.11",
]
viz = [
  "matplotlib>=3.7",
  "plotly>=5.0",
  "seaborn>=0.12",
  "mplfinance>=0.12",
]

live_data = [
  "yfinance>=0.2",
]

dashboard = [
  "streamlit>=1.30",
  "streamlit-extras>=0.3",
]
broker = [
  "oanda-v20>=3.0",
  "requests>=2.28",
]
data = [
  "yfinance>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
  "integration: integration tests (data, backtest, execution)",
  "e2e: end-to-end tests (deterministic backtest)",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__init__.py", "*/conftest.py"]

[tool.coverage.report]
fail_under = 50
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]
